# turbo-alignment

./: .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  Makefile  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/workflows/: release.yml  tests.yml
configs/exp/deepspeed/: stage2.json  stage3.json
configs/exp/kto/: kto.json
configs/exp/multimodal/: llava_with_textual_attention.json
configs/exp/templates/: gemma2.jinja  llama3.jinja
docs/: GUIDE.md  checkpoint_reproduce.md  dataset_example.md
tests/: conftest.py  constants.py  utils.py
tests/cli/: test_classification.py  test_convert_base.py  test_dpo_train.py  test_inference.py  test_kto_train.py  test_merge_adapters_to_base.py  test_multimodal_inference.py  test_multimodal_preprocessing.py  test_multimodal_train.py  test_rag_train.py  test_rm_train.py  test_rso_sampling.py  test_sft.py
tests/integration/: test_dummy.py  test_trainers.py
tests/sequence_parallel/: compare_gradients.py  compare_values.py  consts.py  dataset.py  deepseed_test_launcher.py  launcher.py  marks.py  test_all.py  test_data_loaders.py  test_dist_utils.py  test_dpo.py  test_gemma_model.py  test_model_output.py  test_sft.py  test_ulysses.py  utils.py
tests/unit/: test_accuracy.py  test_collators.py  test_datasets.py  test_trainer_settings.py
turbo_alignment/: __main__.py  constants.py  vllm_server.py
turbo_alignment/cherry_picks/: __init__.py  base.py  chat.py  classification.py  multimodal.py  rag.py  rm.py
turbo_alignment/cli/: __init__.py  app.py  common.py  inference.py  sampling.py  train.py
turbo_alignment/common/: __init__.py  distributed.py  singleton.py  vllm_utils.py
turbo_alignment/common/data/: io.py
turbo_alignment/common/jinja/: trackers.py
turbo_alignment/common/logging/: __init__.py  clearml.py  logger.py  weights_and_biases.py
turbo_alignment/common/registry/: __init__.py  checks.py  file_utils.py  from_params.py  lazy.py  params.py  registrable.py
turbo_alignment/common/s3/: checkpoints_handler.py
turbo_alignment/common/tf/: convert_to_base_model.py  merge_adapters_to_base.py  monkey_patch_liger.py  special_tokens_setter.py  stopping_criteria.py
turbo_alignment/dataset/: __init__.py  loader.py  registry.py
turbo_alignment/dataset/base/: __init__.py  base.py  models.py
turbo_alignment/dataset/chat/: __init__.py  chat.py  collators.py  conversation.py  models.py
turbo_alignment/dataset/classification/: __init__.py  classification.py  models.py
turbo_alignment/dataset/ddpo/: __init__.py  collators.py  ddpo.py
turbo_alignment/dataset/kto/: __init__.py  collators.py  kto.py  models.py
turbo_alignment/dataset/multimodal/: __init__.py  collators.py  models.py  multimodal.py
turbo_alignment/dataset/pair_preferences/: __init__.py  collators.py  models.py  pair_preference.py
turbo_alignment/dataset/sampling/: __init__.py  models.py  rm.py
turbo_alignment/dist_utils/: comm.py  gather_and_split.py  order.py  utils.py
turbo_alignment/dist_utils/ray/: distributed_torch_ray_actor.py  rayactor_group.py  vllm_engine.py  vllm_worker_wrap.py
turbo_alignment/generators/: __init__.py  base.py  chat.py  classification.py  multihead.py  multimodal.py  rag.py  rm.py  vllm_chat.py
turbo_alignment/metrics/: __init__.py  accuracy.py  coverage.py  distinctness.py  diversity.py  exact_match.py  kl.py  length.py  meteor.py  metric.py  perplexity.py  ragas.py  registry.py  retrieval_utility.py  reward.py  rouge.py  self_bleu.py  str_accuracy.py  utils.py
turbo_alignment/modeling/: gemma.py  mp_accelerate.py  mp_pretrained.py  mp_trainer copy.py  parallel_states.py  patch_accelerate.py  pretrained_model.py  qwen.py  qwen3.py  seq_p_collator.py  ulysses_attn.py  verbose_attn.py
turbo_alignment/pipelines/: __init__.py  base.py
turbo_alignment/sequence_parallel/: README.md  accelerate.py  all_reduce.py  collator.py  gather_logits.py  generation.py  patch_accelerate.py  trainer.py  utils.py  vocab_parallel_cross_entropy.py
turbo_alignment/settings/: __init__.py  base.py  cherry_pick.py  metric.py  modality.py  model.py  online.py  rag_model.py  s3.py  weights_and_biases.py
turbo_alignment/trainers/: __init__.py  base_args.py  classification.py  custom_loss.py  ddpo.py  dpo.py  grpo.py  kto.py  lddpo.py  multigpu.py  multimodal.py  online.py  ref_model.py  reinforce.py  reward_processor.py  rm.py  sft_with_rm.py  utils.py
tutorials/: tutorial.md
tutorials/deepspeed_configs/: stage2.json  stage2_offloading.json  stage2_tp.json  stage3_offloading.json  stage3_optimizer_offloading.json  stage3_params_offloading.json
tutorials/dpo/: dpo.ipynb  dpo.json  dpo.py
tutorials/kto/: kto.json  kto.py
tutorials/multimodal/: create_tutorial_dataset.py  multimodal.json  multimodal.md  multimodal.py  preprocessing.json
tutorials/rag/: .env.example  rag.ipynb  rag.py
tutorials/rm/: rm.ipynb  rm.json  rm.py
tutorials/sft/: sft.ipynb  sft.json  sft.py
(+310 files in other folders)
