[tool.poetry]
name = "turbo-alignment"
packages = [
    { include = "turbo_alignment" },
]
version = "0.0.4"
description = "turbo-alignment repository"
authors = ["T Mega Alignment Team <n.surnachev@tcsbank.ru>" ]
readme = "README.md"
repository = "https://github.com/turbo-llm/turbo-alignment"
keywords = ["alignment", "llm", "dpo", "ppo", "rlhf"]


[tool.poetry.dependencies]
python = "^3.10"
transformers = "4.51.3"
peft = "0.8.2"
typer ="^0.9.0"
wandb ="^0.15.3"
scipy = "^1.1.0"
torch = "2.5.1"
numpy = "^1.21"
tomlkit ="^0.11.8"
platformdirs ="^3.5.3"
loguru ="^0.7.0"
sentencepiece ="^0.2.0"
bitsandbytes ="^0.41.1"
hvac ="^1.1.1"
python-dotenv ="^1.0.0"
protobuf ="^3.20.0"
rouge-score ="^0.1.2"
ftfy ="^6.1.1"
iopath ="^0.1.10"
jupyter ="^1.0.0"
wheel ="^0.42.0"
pydantic-settings ="^2.2.1"
pydantic ="^2.7.0"
langchain-huggingface = "^0.0.3"
clearml = "^1.16.4"
cached-path = ">=1.6.3"
boto3 = "1.35.26"

deepspeed = { version = "^0.16.4", optional = true }
accelerate = { version = "1.6.0", optional = true }
vllm = {version = "0.6.4", optional = true}
liger-kernel = {version = "0.5.2", optional = true}


[tool.poetry.dev-dependencies]
coverage = "^7.2.7"
pytest = "^7.3.2"
black = "^23.3.0"
isort = "^5.12.0"
unify = "^0.5"
mypy = "^1.3.0"
flake8 = "^6.0.0"
pylint = "^2.17.4"
pylint-gitlab = "^1.2.0"
pydantic-core = "^2.18.2"
annotated-types = "^0.6.0"

[tool.poetry.extras]
deepspeed = ["deepspeed", "accelerate"]
gpu = ["xformers", "vllm", "liger-kernel"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
